--- a/css/style.css
+++ b/css/style.css
@@ -1,128 +1,158 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,900&display=swap');
-*{
-    font-family: 'Poppins',cursive;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;1,900&display=swap");
+* {
+  font-family: "Poppins", cursive;
 }
-body{
-    color: rgb(255, 246, 246);
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: black;
+body {
+  color: rgb(255, 246, 246);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: black;
 }
-.greetings{
-    font-size: 6rem;
-    font-weight: 900;
+.greetings {
+  font-size: 6rem;
+  font-weight: 900;
 }
-.greetings > span{
-    animation: glow 2.5s ease-in-out infinite;
+.greetings > span {
+  animation: glow 2.5s ease-in-out infinite;
 }
-@keyframes glow{
-    0%, 100%{
-        color: #fff;
-        text-shadow: 0 0 12px #39c6d6, 0 0 50px #39c6d6, 0 0 100px #39c6d6;
-    }
-    10%, 90%{
-        color: #111;
-        text-shadow: none;
-    }
+@keyframes glow {
+  0%,
+  100% {
+    color: #fff;
+    text-shadow: 0 0 12px #39c6d6, 0 0 50px #39c6d6, 0 0 100px #39c6d6;
+  }
+  10%,
+  90% {
+    color: #111;
+    text-shadow: none;
+  }
 }
-.greetings > span:nth-child(2){
-    animation-delay: .2s ;
+.greetings > span:nth-child(2) {
+  animation-delay: 0.2s;
 }
-.greetings > span:nth-child(3){
-    animation-delay: .4s ;
+.greetings > span:nth-child(3) {
+  animation-delay: 0.4s;
 }
-.greetings > span:nth-child(4){
-    animation-delay: .6s;
+.greetings > span:nth-child(4) {
+  animation-delay: 0.6s;
 }
-.greetings > span:nth-child(5){
-    animation-delay: .8s;
+.greetings > span:nth-child(5) {
+  animation-delay: 0.8s;
 }
 
-.description{
-    font-size: 1.5rem;
-    margin-bottom: 20px;
+.description {
+  font-size: 1.5rem;
+  margin-bottom: 20px;
 }
 
-html, body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #0a0a0a;
-    overflow: hidden;
-    /* transform: scale(1.5); */
+html,
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #161616;
+  overflow: hidden;
+  /* transform: scale(1.5); */
+}
+
+/* button */
+.btn {
+  margin: 100px;
+  padding: 15px 40px;
+  border: none;
+  outline: none;
+  color: #fff;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 12px;
+}
+.btn::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #333;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+/* glow */
+.btn::before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 600%;
+  z-index: -1;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  filter: blur(8px);
+  animation: glowing 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+  opacity: 0;
+}
+
+@keyframes glowing {
+  0% {
+    background-position: 0 0;
   }
-  
-  /* button */
-  .btn {
-    margin: 0px;
-    padding: 15px 40px;
-    border: none;
-    outline: none;
-    color: #f7f6f6;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    border-radius: 12px;
+  50% {
+    background-position: 400% 0;
   }
-  .btn::after {
-    content: "";
-    z-index: -1;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: #333;
-    left: 0;
-    top: 0;
-    border-radius: 10px;
+  100% {
+    background-position: 0 0;
   }
-  /* glow */
-  .btn::before {
-    content: "";
-    background: linear-gradient(
-      45deg,
-      #FF0000, #FF7300, #FFFB00, #48FF00,
-      #00FFD5, #002BFF, #FF00C8, #FF0000
-    );
-    position: absolute;
-    top: -2px;
-    left: -2px;
-    background-size: 600%;
-    z-index: -1;
-    width: calc(100% + 4px);
-    height:  calc(100% + 4px);
-    filter: blur(8px);
-    animation: glowing 20s linear infinite;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-    opacity: 0;
+}
+
+/* hover */
+.btn:hover::before {
+  opacity: 1;
+}
+
+.btn:active:after {
+  background: transparent;
+}
+
+.btn:active {
+  color: #000;
+  font-weight: bold;
+}
+.button a {
+  text-decoration: none;
+  font-size: 1rem;
+  color: #0c0000;
+}
+
+@media screen and (max-width: 574px) {
+  .greetings {
+    display: block;
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: center;
   }
-  
-  @keyframes glowing {
-    0% {background-position: 0 0;}
-    50% {background-position: 400% 0;}
-    100% {background-position: 0 0;}
-  }
-  
-  /* hover */
-  .btn:hover::before {
-    opacity: 1;
-  }
-  
-  .btn:active:after {
-    background: transparent;
-  }
-  
-  .btn:active {
-    color: #000;
-    font-weight: bold;
-  }
-.button a{
-    text-decoration: none;
+  .description {
     font-size: 1rem;
-    color: #0c0000;
-}
+  }
 
+  .button a {
+    font-size: 0.51rem;
+  }
+}
